5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1723_2506.log
== TEST (2019-05-14 11:20:32) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while(p < 12000 or p > 0):
	q = x*(y/100)
	p = p + q - z
	t = t + 1
if(p >= 12000):
	print("LIMITE")
else:
	print("EXTINCAO'")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(p < 12000 or p > 0):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:55) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((p < 12000) or (p > 0)):
	q = x*(y/100)
	p = p + q - z
	t = t + 1
if(p >= 12000):
	print("LIMITE")
else:
	print("EXTINCAO'")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while((p < 12000) or (p > 0)):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:21:46) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((x < 12000) or (x > 0)):
	q = x*(y/100)
	x = x + q - z
	t = t + 1
if(x >= 12000):
	print("LIMITE")
else:
	print("EXTINCAO'")
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while((p < 12000) or (p > 0)):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:22:52) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((x < 12000) or (x > 0)):
	q = x * (y/100)
	x = x + q - z
	t = t + 1
print(t)
if(x >= 12000):
	print("LIMITE")
else:
	print("EXTINCAO'")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while((p < 12000) or (p > 0)):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:26) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((x < 12000) or (x > 0)):
	q = x * (y/100)
	x = x + q - z
	t = t + 1
print(t)
if(x > 12000):
	print("LIMITE")
else:
	print("EXTINCAO'")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while((p < 12000) or (p > 0)):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:47) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((x < 12000) or (x > 0)):
	q = x * (y/100)
	x = x + q - z
	t = t + 1
print(t)
if(x > 12000):
	print("LIMITE")
else:
	print("EXTINCAO")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while((p < 12000) or (p > 0)):
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:01) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((x < 12000) and (x > 0)):
	q = x * (y/100)
	x = x + q - z
	t = t + 1
print(t)
if(x > 12000):
	print("LIMITE")
else:
	print("EXTINCAO")

-- OUTPUT:
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:08) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((x < 12000) and (x > 0)):
	q = x * (y/100)
	x = x + q - z
	t = t + 1
print(t)
if(x > 12000):
	print("LIMITE")
else:
	print("EXTINCAO")

-- OUTPUT:
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:25:32) 
-- CODE:
# quantidade inicial de peixes
x = int(input("Insira: "))
# Percentual de crescimento anual do numero de peixes
y = int(input("Insira: "))
# Quantidade de tambaquis retirados por ano
z = int(input("Insira: "))
t = 0

while((x < 12000) and (x > 0)):
	q = x * (y/100)
	x = x + q - z
	t = t + 1

if(x > 12000):
	print("LIMITE")
else:
	print("EXTINCAO")
print(t)
-- EXECUTION TIME:
0.15485
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
